# rustaris-ds

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: commands.rs  config.rs  lib.rs  logging.rs  main.rs  memory.rs  objects.rs  thinking.rs  tools.rs
src/adapters/: mod.rs
src/adapters/napcat/: listener.rs  mod.rs  objects.rs  poster.rs
