[package]
name = "rustaris-ds"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
colored = "3.1.1"
ctrlc = "3.5.1"
dyn-fmt = "0.4.3"
lazy_static = "1.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smart-default = "0.7.1"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
websockets= "0.3.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
anyhow = { version = "1.0.101", features = ["backtrace"] }
dotenv = "0.15.0"
async-trait = "0.1.89"
deepseek-api = "0.1.1"
rust-mc-status = "2.0.0"
sanitize-filename = "0.6.0"
